--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - index.md
   - professional experiences.md
   - personal projects.md
+  - skillset.md
   - summary.md 
   - contact.md
 extra:
